--- a/src/css/App.css
+++ b/src/css/App.css
@@ -59,3 +59,18 @@
 .button:active {
   background-color: rgba(112, 76, 182, 0.2);
 }
+
+.container.splash {
+  background-color: #6813cc;
+  height: 100vh;
+  width: 100vw;
+}
+
+.splash .imageContainer {
+  margin: auto;
+  width: 200px;
+}
+
+.splash img {
+  width: 200px;
+}
