--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,11 +1,27 @@
-#root {
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* font-family: "Poppins", sans-serif; */
+  text-decoration: none;
+}
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+} */
+
+body {
+  margin: 0;
 }
 
-.row {
+#root {
+  background-color: #f5f6f8;
+}
+
+/* .row {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,7 +33,7 @@
 }
 .row:not(:last-child) {
   margin-bottom: 16px;
-}
+} */
 
 .value {
   font-size: 78px;
@@ -73,4 +89,54 @@
 
 .splash img {
   width: 200px;
+}
+
+.heroBanner {
+  /* background-color: #6813cc; */
+  background: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+  border-bottom: 100px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.logoContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.logo {
+  width: 150px;
+  height: auto;
+  margin: 10px;
+}
+
+img {
+  border-radius: 10px;
+}
+
+.navContainer {
+  display: flex;
+  justify-content: center;
+}
+
+.navContainer > * {
+  margin-top: 20px;
+  margin-right: 10px; /* Adjust the value as needed */
+}
+
+/* .searchResults {
+  background-color: #6a11cb;
+} */
+
+.searchResultCard {
+  background-color: white;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
