heart icon added

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -236,7 +236,8 @@ img {
   width: auto;
 }
 
-.favourite-button {
+.favouriteButtonClass {
+  color: red;
 }
 
 @media screen and (max-width: 500px) {
