--- a/src/css/App.css
+++ b/src/css/App.css
@@ -153,8 +153,9 @@ img {
   margin-bottom: 20px;
   border-radius: 5px;
   width: calc(100% - 40px);
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 800px;
 }
 
 .searchResults {
