--- a/src/css/App.css
+++ b/src/css/App.css
@@ -282,14 +282,14 @@ img {
   list-style-type: disc;
 }
 
-.patientDashboardContainer,
+/* .patientDashboardContainer,
 .practitionerDashboardContainer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  /* min-height: 400px; */
-}
+  align-items: center; */
+/* min-height: 400px; */
+/* } */
 
 .patientDashboardText,
 .practitionerDashboardText {
@@ -738,7 +738,20 @@ textarea:focus {
   background-color: #4546e5;
 }
 
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 0.9rem;
+  margin-top: 20px;
+}
+
 /* practitioner searchResults end*/
+
+/* practitionerMessaging */
+
+/* practitionerMessaging end */
 
 @media screen and (max-width: 500px) {
   .searchResults {
