--- a/src/css/App.css
+++ b/src/css/App.css
@@ -273,10 +273,10 @@ img {
   padding: 15px;
 }
 
-.practitionerDetails img {
+/* .practitionerDetails img {
   margin-bottom: 10px;
-  max-width: 300px;
-}
+  max-width: 200px;
+} */
 
 .practitionerQualifications {
   list-style-type: disc;
@@ -290,6 +290,92 @@ img {
   align-items: center; */
 /* min-height: 400px; */
 /* } */
+
+.singlePractitioner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.practitionerDetails {
+  width: 80%;
+  max-width: 800px;
+  margin: 20px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.practitionerDetails h3 {
+  margin-bottom: 10px;
+  font-size: 1.5rem;
+  color: #333;
+}
+
+.practitionerDetails h1 {
+  margin: 10px 0;
+  font-size: 2rem;
+  color: #333;
+}
+
+.practitionerDetails img {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 20px;
+}
+
+.textContainer {
+  margin-bottom: 20px;
+}
+
+.textContainer h5 {
+  margin-bottom: 10px;
+  font-size: 1.2rem;
+  color: #333;
+}
+
+.textContainer p {
+  margin-bottom: 10px;
+  font-size: 1rem;
+  color: #666;
+}
+
+.practitionerControls {
+  margin-top: 20px;
+}
+
+.messageHistoryContainer {
+  margin-bottom: 20px;
+}
+
+.messageHistoryContainer h2 {
+  margin-bottom: 10px;
+  font-size: 1.3rem;
+  color: #333;
+}
+
+.messageHistoryContainer ul {
+  list-style: none;
+  padding: 0;
+}
+
+.messageHistoryContainer li {
+  margin-bottom: 10px;
+}
+
+.messageHistoryContainer p {
+  margin-bottom: 5px;
+  font-size: 1rem;
+  color: #666;
+}
+
+.MessageInputContainer {
+  margin-bottom: 20px;
+}
 
 .patientDashboardText,
 .practitionerDashboardText {
@@ -358,6 +444,13 @@ img {
 
 .loginButtonContainer .mainButton {
   width: 100%;
+}
+.buttonContainer {
+  width: 100%;
+  max-width: 800px;
+  display: flex;
+  justify-content: space-between; /* Add this line */
+  margin-top: 20px;
 }
 
 .signUpContainer {
@@ -662,6 +755,15 @@ textarea:focus {
   margin-top: 20px;
 }
 
+.MessageInputContainer {
+  width: 100%;
+}
+
+.messageHistoryContainer {
+  margin-top: 20px;
+  width: 100%;
+}
+
 .MainButton {
   background-color: #4caf50;
   color: white;
@@ -695,6 +797,7 @@ textarea:focus {
   background-color: #cfe2f3;
   padding: 10px;
   margin-bottom: 5px;
+  /* margin-left: -32px; */
   border-radius: 5px;
   /* width: 100%; */
   list-style-type: none;
@@ -727,6 +830,10 @@ textarea:focus {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.patientInfo {
+  /* margin-right: 5px; */
 }
 
 .patientName {
