--- a/src/css/App.css
+++ b/src/css/App.css
@@ -377,6 +377,13 @@ img {
   margin-bottom: 20px;
 }
 
+.messageHistoryBox {
+  max-height: 300px;
+  overflow-y: auto;
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+
 .patientDashboardText,
 .practitionerDashboardText {
 }
@@ -389,8 +396,6 @@ img {
   background-color: white;
   border-radius: 10px;
   margin-bottom: 20px;
-  /* margin-left: 20px; */
-  /* margin-right: 20px; */
   padding: 15px;
   max-width: 80%;
 }
@@ -845,10 +850,10 @@ textarea:focus {
   background-color: #4caf50;
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
-  font-size: 16px;
+  /* font-size: 16px; */
   cursor: pointer;
   border-radius: 8px;
   transition: background-color 0.3s ease;
